--- a/sass/blocks/index/_benefits.sass
+++ b/sass/blocks/index/_benefits.sass
@@ -5,7 +5,7 @@
         content: ''
         background: url(../img/dotted.png) left no-repeat
         width: 100%
-        min-height: 310px
+        min-height: 300px
         position: absolute
         top: 0
         left: 0
@@ -17,14 +17,14 @@
             font-size: 40px
             position: relative
             background-color: #ffffff
-            color: #202020
+            color: #2e2e2e
             margin: 0 0 80px
             max-width: 480px
             line-height: 60px
         &__text
             position: relative
             background-color: #ffffff
-            color: #202020
+            color: #131313
             margin: 0 0 55px
             font-family: 'Open Sans', sans-serif
             font-size: 20px
