--- a/sass/blocks/index/_do.sass
+++ b/sass/blocks/index/_do.sass
@@ -6,43 +6,44 @@
         &__title
             color: #fcb800
             font-family: 'Comfortaa', sans-serif
-            font-size: 40px
+            font-size: 32px
             font-weight: bold
             margin: 99px 0 38px
         p
             margin: 0
-            max-width: 760px
+            max-width: 700px
             color: $white
             font-family: 'Open Sans', sans-serif
-            font-size: 20px
+            font-size: 18px
             font-weight: bold
             line-height: 35px
-        &s
-            display: flex
         &__image
             position: relative
             margin-top: -109px
+            max-width: 650px
+        &s
+            justify-content: center
     &-btn
         justify-content: center
         &__link
-            max-width: 311px
+            max-width: 270px
             width: 100%
-            height: 64px
+            height: 58px
             border-radius: 4px
             background-color: #10964e
             color: #ffffff
             font-family: 'Montserrat', sans-serif
-            font-size: 24px
+            font-size: 20px
             display: flex
             align-items: center
             justify-content: center
             font-weight: 600
         &__phone
             font-family: 'Montserrat', sans-serif
-            font-size: 26px
+            font-size: 22px
             font-weight: 600
             color: #ffffff
             margin-left: 39px
             span
-                font-weight: 300
+                font-weight: 300           
             
